MB-37789 Change magma_commit_point_interval from minutes to seconds

Magma uses magma_commit_point_interval to create rollbackable persistent
snapshots. Atm we create a snapshot every 1 minutes and maintain the last
5 snapshots. Since the interval is 1 min QE tests have to load data for
5 min to fully test rollback. It would be better to let them lower this
to a few seconds and speedup the rollback tests.

Change-Id: I7a7484c91eb85b8f8f8669623494db0776fc16a9
Reviewed-on: http://review.couchbase.org/122577
Reviewed-by: Scott Lashley <scott.lashley@couchbase.com>
Tested-by: Build Bot <build@couchbase.com>
Reviewed-by: Dave Rigby <daver@couchbase.com>